--- a/audiodecoder.dumb/resources/language/resource.language.fr_fr/strings.po
+++ b/audiodecoder.dumb/resources/language/resource.language.fr_fr/strings.po
@@ -5,29 +5,30 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/audiodecoder.dumb/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2022-12-22 15:20+0000\n"
+"Last-Translator: skypichat <skypichat@hotmail.fr>\n"
+"Language-Team: French (France) <https://kodi.weblate.cloud/projects/kodi-add-ons-audio-decodersencoders/audiodecoder-dumb/fr_fr/>\n"
 "Language: fr_fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 4.15\n"
 
 msgctxt "Addon Summary"
 msgid "Dynamic Universal Music Bibliotheque"
-msgstr ""
+msgstr "Bibliothèque Dynamic Universal Music"
 
 msgctxt "Addon Description"
 msgid "DUMB is a module audio renderer library. It reads module files and outputs audio that can be dumped to the actual audio playback library.[CR][CR]On Kodi Supports playback of the following module formats:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)"
-msgstr ""
+msgstr "DUMB est une bibliothèque de modules de rendu audio. Il lit les fichiers de module et produit de l'audio qui peut être vidé vers la bibliothèque de lecture audio réelle.[CR][CR]Sur Kodi, il prend en charge la lecture des formats de module suivants :[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)"
 
 msgctxt "Addon Disclaimer"
 msgid "It is recommended to use \"OpenMPT Audio Decoder\" addon instead of this one."
-msgstr ""
+msgstr "Il est recommandé d'utiliser l'addon \"OpenMPT Audio Decoder\" au lieu de celui-ci."
 
 msgctxt "Addon Lifecyclestate"
 msgid "Replaced by audiodecoder.openmpt addon! However, but still usable here."
-msgstr ""
+msgstr "Remplacé cependant par l'addon audiodecoder.openmpt ! Mais toujours utilisable ici."
