--- a/audiodecoder.dumb/resources/language/resource.language.ca_es/strings.po
+++ b/audiodecoder.dumb/resources/language/resource.language.ca_es/strings.po
@@ -5,29 +5,30 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/audiodecoder.dumb/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2022-08-21 17:14+0000\n"
+"Last-Translator: Xean <xeanhort007@gmail.com>\n"
+"Language-Team: Catalan (Spain) <https://kodi.weblate.cloud/projects/kodi-add-ons-audio-decodersencoders/audiodecoder-dumb/ca_es/>\n"
 "Language: ca_es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.13\n"
 
 msgctxt "Addon Summary"
 msgid "Dynamic Universal Music Bibliotheque"
-msgstr ""
+msgstr "Biblioteca de música universal dinàmica (Dynamic Universal Music Bibliotheque)"
 
 msgctxt "Addon Description"
 msgid "DUMB is a module audio renderer library. It reads module files and outputs audio that can be dumped to the actual audio playback library.[CR][CR]On Kodi Supports playback of the following module formats:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)"
-msgstr ""
+msgstr "DUMB és una biblioteca renderitzadora de mòduls d'àudio. Llegeix fitxers de mòduls i emet àudio que es pot bolcar a la biblioteca de reproducció d'àudio real.[CR][CR]A Kodi admet la reproducció dels formats de mòduls següents:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)"
 
 msgctxt "Addon Disclaimer"
 msgid "It is recommended to use \"OpenMPT Audio Decoder\" addon instead of this one."
-msgstr ""
+msgstr "Es recomana utilitzar el complement \"OpenMPT Audio Decoder\" en lloc d'aquest."
 
 msgctxt "Addon Lifecyclestate"
 msgid "Replaced by audiodecoder.openmpt addon! However, but still usable here."
-msgstr ""
+msgstr "Substituït pel complement audiodecoder.openmpt! Tanmateix, encara es pot utilitzar aquí."
